Modificado o Arquivo style.html

--- a/templates/css/style.html
+++ b/templates/css/style.html
@@ -54,6 +54,20 @@
     </div>
     <hr>
     <br>
+<H3>CSS resolveu um grande problema</H3>
+<p>O <strong>HTML</strong> nunca fot planejado para conter tags para formatar uma página da Web!</p>
+<p><strong>HTML</strong> foi criado para descrever o conteúdo de uma página Web, como:</p>
+<p>&#10094; h1 &#10095; Este é um título &#10094;/h1&#10095;</p>
+<p>&#10094;p&#10095;Este é um parágrafo&#10094;/p&#10095;</p>
+<p>Quando tags como <strong>&#10094;font &#10095;</strong> e atributos de cor foram adicionados à especificação<br>
+    <strong>HTML 3.2</strong>, isso iniciou um pesadelo para os desenvolvedores web. O desenvolvimento de grades sites,<br>
+     onde fontes e infomações de cores eram adicionadas a cada páginas, tornou-se um processo longo e cara.</p>
+<p><strong>CSS</strong> removeu a formatação de estilo da página <strong>HTML</strong>!</p>
+<h3>CSS economiza muito trabalho!</h3>
+<p>As definições de estilo normalmente são salvas em arquivos .css externos.</p>
+<p>Com um arquivo de folha de estilo externo, você pode alterar a aparência de um site inteiro alterando apenas um arquivo!</p>
+
+
     
 
 
