Criado arquivos javascript.html e javascript.css modificado style.html, index.html e cursohtml.html

--- a/templates/css/style.html
+++ b/templates/css/style.html
@@ -15,7 +15,7 @@
             <ul>
                 <a href="../index.html"><li>HOME</li></a>
                 <a href="../cursohtml.html"><li>HTML</li></a>
-                <a href=""><li>JAVASCRIPT</li></a>
+                <a href="../javascript/javascript.html"><li>JAVASCRIPT</li></a>
                 <a href=""><li>PYTHON</li></a>
                 <a href=""><li>JAVA</li></a>
                 <a href=""><li>GIT & GITHUB</li></a>
