--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
                 <ul>
                     <a href="cursohtml.html"><li>HTML</li></a>
                     <a href="css/style.html"><li>CSS</li></a>
-                    <a href=""><li>JAVASCRIPT</li></a>
+                    <a href="javascript/javascript.html"><li>JAVASCRIPT</li></a>
                     <a href=""><li>PYTHON</li></a>
                     <a href=""><li>JAVA</li></a>
                     <a href=""><li>GIT & GITHUB</li></a>
