Modificado javascript.css, exemplo.html e javascript.html addicionado javascript01.png, javascript02.png, javascript.js e exemplo.js

--- a/templates/exemplo.html
+++ b/templates/exemplo.html
@@ -17,7 +17,13 @@
             </nav>
         </div>
     </header>
-    <p> Este é um parágrafo</p>
+    <h2>O que o JavaScript pode fazer?</h2>
+
+    <p id="demo">O JavaScript pode alterar o conteúdo HTML</p>
+
+    <button type="button" onclick="document.getElementById('demo').innerHTML = 'Ola, javaScript'">Clique em mim</button>
+
+    <script src="../Static/script/exemplos.js"></script>
     
 
     
