--- a/templates/javascript/javascript.html
+++ b/templates/javascript/javascript.html
@@ -7,6 +7,49 @@
     <link rel="stylesheet" href="../../Static/css/javascript.css">
 </head>
 <body>
+    <header>
+        <h1>JAVASCRIPT</h1>
+        <div>
+            <nav>
+                <ul>
+                    <a href="../index.html"><li>HOME</li></a>
+                    <a href="../cursohtml.html"><li>HTML</li></a>
+                    <a href="../css/style.html"><li>CSS</li></a>
+                    <a href=""><li>PYTHON</li></a>
+                    <a href=""><li>JAVA</li></a>
+                    <a href=""><li>GIT & GITHUB</li></a>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <hr>
+    <br>
+    <section>
+        <h3>Introdução ao JavaScript</h3>
+        <h4>JavaScript pode alterar o conteúdo HTML</h4>
+        <p class="mac" >Um dos muitos métodos <b>JavaScript HTML</b> é <strong>getElementById()</strong>.</p>
+        <p>O exemplo abaixo "encontra" um elemento <strong>HTML</strong><br>
+        (com id="demo") e altera o conteúdo do elemento (innerHTML) para "hello JavaScript":</p>
+        <div>
+            <h3>Exemplo</h3>
+            <div class="exempimg">
+                <img class="imgex" src="../../Static/imgs/javascript01.png" alt="">
+                <img class="imgex01" src="../../Static/imgs/javascript02.png" alt="">
+            </div>
+        </div>
+        <div>
+            <p>JavaScript aceita aspas duplas e simples:</p>
+        </div>
+        <h3>javascript pode alterar o valores de atributos HTML</h3>
+        <p class="mac" >Neste exemplo, o JavaScript altera o valor do <strong>src</strong> atributos (source) de uma &#10094;img &#10095; tag:</p>
+
+
+
+    </section>
+    <br>
+    <footer>
+        <H4>Aprendendo javascript</H4>
+    </footer>
     
 </body>
 </html>
