--- a/templates/javascript/javascript.html
+++ b/templates/javascript/javascript.html
@@ -82,6 +82,7 @@
         </div>
     </section>
     <br>
+    <div class="box1"><a class="buttonnext">Proximo</a></div>
     <footer>
         <H4>Aprendendo javascript</H4>
     </footer>
