--- a/templates/css/style.html
+++ b/templates/css/style.html
@@ -7,19 +7,33 @@
     <link rel="Stylesheet" href="../../Static/css/style.css">
 </head>
 <body>
-    <Header>
-        <h1>CSS</h1>
-        <h2>Cascading Style Sheets</h2>
+<Header>
+    <h1>CSS</h1>
+    <h2>Cascading Style Sheets</h2>
     <div>
         <nav>
             <ul>
-                <a href="../index.html"><li>HOME</li></a>
-                <a href="../cursohtml.html"><li>HTML</li></a>
-                <a href="../javascript/javascript.html"><li>JAVASCRIPT</li></a>
-                <a href=""><li>PYTHON</li></a>
-                <a href=""><li>JAVA</li></a>
-                <a href=""><li>GIT & GITHUB</li></a>
-                <a href="../exemplo.html"><li>exemplos</li></a>
+                <a href="../index.html">
+                    <li>HOME</li>
+                </a>
+                <a href="../Html/cursohtml.html">
+                    <li>HTML</li>
+                </a>
+                <a href="../javascript/javascript.html">
+                    <li>JAVASCRIPT</li>
+                </a>
+                <a href="">
+                    <li>PYTHON</li>
+                </a>
+                <a href="">
+                    <li>JAVA</li>
+                </a>
+                <a href="">
+                    <li>GIT & GITHUB</li>
+                </a>
+                <a href="../exemplo.html">
+                    <li>exemplos</li>
+                </a>
             </ul>
         </nav>
     </div>
@@ -34,8 +48,12 @@
     <div>
         <ul>
             <li><strong>CSS</strong> significa Folha de Estilo em Cascata</li>
-            <li><strong>CSS</strong> descreve como os elementos <strong>HTML</strong> devem ser exibidos na tela, no papel ou em outra mídia</li>
-            <li><strong>CSS</strong>economiza muito trabalho. Ele pode controla o layout de várias páginas da Web de uma só vez</li>
+            <li><strong>CSS</strong> descreve como os elementos <strong>HTML</strong> devem ser exibidos na tela, no
+                papel ou em outra mídia
+            </li>
+            <li><strong>CSS</strong>economiza muito trabalho. Ele pode controla o layout de várias páginas da Web de uma
+                só vez
+            </li>
             <li>Folhas de estilo externa são armazenadas em arquivo <strong>CSS</strong></li>
         </ul>
     </div>
@@ -50,26 +68,24 @@
             <img class="imgex" src="../../Static/imgs/cssexemplo01.png.png" alt="Css Exemplo 1">
             <img class="imgex01" src="../../Static/imgs/cssexemplo02.png" alt="Css exemplo 2">
         </div>
-    
+
     </div>
     <hr>
     <br>
-<H3>CSS resolveu um grande problema</H3>
-<p>O <strong>HTML</strong> nunca fot planejado para conter tags para formatar uma página da Web!</p>
-<p><strong>HTML</strong> foi criado para descrever o conteúdo de uma página Web, como:</p>
-<p>&#10094; h1 &#10095; Este é um título &#10094;/h1&#10095;</p>
-<p>&#10094;p&#10095;Este é um parágrafo&#10094;/p&#10095;</p>
-<p>Quando tags como <strong>&#10094;font &#10095;</strong> e atributos de cor foram adicionados à especificação<br>
-    <strong>HTML 3.2</strong>, isso iniciou um pesadelo para os desenvolvedores web. O desenvolvimento de grades sites,<br>
-     onde fontes e infomações de cores eram adicionadas a cada páginas, tornou-se um processo longo e cara.</p>
-<p><strong>CSS</strong> removeu a formatação de estilo da página <strong>HTML</strong>!</p>
-<h3>CSS economiza muito trabalho!</h3>
-<p>As definições de estilo normalmente são salvas em arquivos .css externos.</p>
-<p>Com um arquivo de folha de estilo externo, você pode alterar a aparência de um site inteiro alterando apenas um arquivo!</p>
-
-
-    
-
+    <H3>CSS resolveu um grande problema</H3>
+    <p>O <strong>HTML</strong> nunca fot planejado para conter tags para formatar uma página da Web!</p>
+    <p><strong>HTML</strong> foi criado para descrever o conteúdo de uma página Web, como:</p>
+    <p>&#10094; h1 &#10095; Este é um título &#10094;/h1&#10095;</p>
+    <p>&#10094;p&#10095;Este é um parágrafo&#10094;/p&#10095;</p>
+    <p>Quando tags como <strong>&#10094;font &#10095;</strong> e atributos de cor foram adicionados à especificação<br>
+        <strong>HTML 3.2</strong>, isso iniciou um pesadelo para os desenvolvedores web. O desenvolvimento de grades
+        sites,<br>
+        onde fontes e infomações de cores eram adicionadas a cada páginas, tornou-se um processo longo e cara.</p>
+    <p><strong>CSS</strong> removeu a formatação de estilo da página <strong>HTML</strong>!</p>
+    <h3>CSS economiza muito trabalho!</h3>
+    <p>As definições de estilo normalmente são salvas em arquivos .css externos.</p>
+    <p>Com um arquivo de folha de estilo externo, você pode alterar a aparência de um site inteiro alterando apenas um
+        arquivo!</p>
 
 
 </section>
@@ -77,6 +93,6 @@
     <h4>Aprendendo CSS</h4>
 </footer>
 
-    
+
 </body>
 </html>
