--- a/templates/index.html
+++ b/templates/index.html
@@ -7,27 +7,39 @@
     <link rel="stylesheet" href="../Static/css/home.css">
 </head>
 <body>
-    <header>
-        <h1>GUIA DE ESTUDOS</h1>
-        <h2>Bacharelado de Tecnologia da Infomação</h2>
-        <div>
-            <nav>
-                <ul>
-                    <a href="cursohtml.html"><li>HTML</li></a>
-                    <a href="css/style.html"><li>CSS</li></a>
-                    <a href="javascript/javascript.html"><li>JAVASCRIPT</li></a>
-                    <a href=""><li>PYTHON</li></a>
-                    <a href=""><li>JAVA</li></a>
-                    <a href=""><li>GIT & GITHUB</li></a>
-                </ul>
-            </nav>
-        </div>
-    </header>
-    <hr>
-    <br>
-    <footer>
-        <h4>Aprendendo HTML</h4>
-    </footer>
-    
+<header>
+    <h1>GUIA DE ESTUDOS</h1>
+    <h2>Bacharelado de Tecnologia da Infomação</h2>
+    <div>
+        <nav>
+            <ul>
+                <a href="Html/cursohtml.html">
+                    <li>HTML</li>
+                </a>
+                <a href="css/style.html">
+                    <li>CSS</li>
+                </a>
+                <a href="javascript/javascript.html">
+                    <li>JAVASCRIPT</li>
+                </a>
+                <a href="">
+                    <li>PYTHON</li>
+                </a>
+                <a href="">
+                    <li>JAVA</li>
+                </a>
+                <a href="">
+                    <li>GIT & GITHUB</li>
+                </a>
+            </ul>
+        </nav>
+    </div>
+</header>
+<hr>
+<br>
+<footer>
+    <h4>Aprendendo HTML</h4>
+</footer>
+
 </body>
 </html>
