--- a/templates/javascript/javascript01.html
+++ b/templates/javascript/javascript01.html
@@ -5,13 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JAVASCRIPT</title>
     <link rel="stylesheet" href="../../Static/css/javascript.css">
-    <script>
-        function myFunction() {
-            document.getElementById('demo4').innerHTML = "Paragrafo changed."
-        }
-    </script>
-
-
 </head>
 <body>
 <header>
@@ -51,7 +44,7 @@
     <h3>Exemplo</h3>
     <div>
         <h2>JavaScript no corpo</h2>
-        <p id="demo3"></p>
+        <p id="vam"></p>
     </div>
 </div>
 <h3>Funções e eventos JavaScript</h3>
@@ -82,14 +75,15 @@
         }
     </div>
 </div>
+<p>Scripts externos são práticos quando o mesmo código é usado em muitas páginas Web diferentes.</p>
+<p>Os arquivos JavaScript têm a extensão de arquivo <strong>.js</strong>.</p>
+<p class="mac">Para usar um script externo, coloque o nome do arquivo de script no <strong>src</strong> atributo (Source) de uma <strong>&#10094;script&#10095;</strong> tag:</p>
 <div class="box1">
     <a href="javascript.html" class="buttonback">&#10094; Anterior</a>
     <a href="javascript02.html" class="buttonnext">Proximo &#10095;</a>
 
 </div>
-<script>
-    document.getElementById('demo3').innerHTML = "Meu primeiro JavaScript"
-</script>
+<script src="../../Static/script/javascript.js"></script>
 <footer>
     <H4>Aprendendo javascript</H4>
 </footer>
